# gtvibeathon

./: .env.backup  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  AGENT_WORKFLOW_ANALYSIS.md  ARCHITECTURE.md  ASYNC_ARCHITECTURE.md  CHATBOX_COMPONENT.tsx  CHATBOX_COMPONENT_HTTP.tsx  CLAUDE.md  COMPLETE_SETUP.md  CONTEXT_UPLOAD_COMPONENT.tsx  CONTRIBUTING.md  DEMO_GUIDE.md  DEPLOY.md  DOWNLOAD_COMPONENT.tsx  DOWNLOAD_FUNCTIONALITY_COMPLETE.md  ENHANCED_TEXTURE_SYSTEM_COMPLETE.md  ENHANCEMENTS.md  FINAL_OVERVIEW.md  FIX_MODEL.md  FRAMER_COMPONENT.tsx  IMPLEMENTATION_SUMMARY.md  INITIALIZATION_COMPLETE.md  LICENSE  ML_TRAINING_COMPLETE.md  ML_TRAINING_READY.md  Makefile  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  Procfile  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_HACKATHON.md  REORGANIZATION_SUMMARY.md  SESSION_STATE_FIX.md  START.sh  START_HERE.md  SYSTEM_READY_SUMMARY.md  (+73 more)
addons/voxel_addon/: __init__.py  operators.py  panels.py  preferences.py
backend/voxelweaver/: MODULE_SUMMARY.md  README.md  __init__.py  blender_bridge.py  context_alignment.py  geometry_handler.py  lighting_engine.py  model_formatter.py  proportion_analyzer.py  scene_validator.py  search_scraper.py  texture_mapper.py  verify_modules.py  voxelweaver_core.py
checkpoints/hdr_agent/: training_info.json
checkpoints/shader_agent/: training_info.json
checkpoints/texture_agent/: training_info.json
data/: shader_dataset.jsonl  shader_demo.jsonl
demos/basic/: simple_demo.py  working_demo.py
demos/houses/: create_modern_house.py
docs/: ARCHITECTURE.md  DATABASE.md  FRAMER_INTEGRATION.md  HDRI_QUICKSTART.md  HDRI_SYSTEM.md  QUICKSTART.md
examples/: animation_examples.md  api_usage.py  database_usage.py  rag_examples.json
examples/blender_scripts/: simple_scene_example.py
examples/prompts/: example_prompts.md
scripts/: README.md  auto_debloat.py  debloat.py  download_polyhaven_hdris.py  enhance_capabilities.py  optimize_agents.py  populate_rag_database.py  requirements.txt  test_blender_addon.py
src/: ARCHITECTURE.md  README.md  main.py  main_async.py
src/agency3d/: __init__.py  cli.py
src/api/: auth.py  database.py  main.py  schemas.py  storage.py  websocket_manager.py
src/orchestrator/: agent_framework.py  async_scene_orchestrator.py  scene_orchestrator.py  subsystem_agents.py
tests/: __init__.py  test_agents.py  test_blender_executor.py  test_config.py  test_script_manager.py
training/: demo_training.py  train_all_agents.py
(+155 files in other folders)
